# todo-api-fastapi

./: .env  auth.py  database.py  main.py  models.py  pyproject.toml  section1-fastapi-guide.md  todo-crud-guide.md
routes/: auth.py  todos.py
