[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "black>=26.5.1",
    "certifi>=2026.5.20",
    "fastapi>=0.137.0",
    "motor>=3.7.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
